<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="#0E0E0E"
    tools:context=".MainActivity1">

    <Button
        android:id="@+id/button"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/b1"
        android:onClick="setActivity2"
        android:text="@string/button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />

    <Button
        android:id="@+id/button0"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/b1"
        android:onClick="reset"
        android:text="@string/button0"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="339dp"
        android:layout_height="342dp"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        tools:ignore="TextSizeCheck">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button11"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat11"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button12"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat12"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button13"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat13"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button14"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat14"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button21"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat21"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button22"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat22"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button23"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat23"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button24"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat24"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button31"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat31"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button32"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat32"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button33"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat33"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button34"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat34"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/button41"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat41"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button42"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat42"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button43"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat43"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button44"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/b1"
                android:onClick="BtnClickMat44"
                android:text="@string/button1"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif-monospace"
        android:text="@string/textView"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="68dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif-monospace"
        android:text="@string/textView2"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>